# timesman

./: CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  LOCAL_STORE_TODO_DEMO.md  README.md  dist-workspace.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.sqlx/: query-2e4a6893442b718ebcfdee2aeb6d9df866797bb94c18e446fa8311e3d1891aca.json  query-788ad973fb3b26e8ff44dc03828279992307c69b961843ab560abc1ef1e5b8b7.json  query-7df653366f7e8d96a2831f0e11e83e7fa2d99586ae15ca4b00a3eb037d434496.json  query-9848fe7610447d5478c68243f38c9868f9e9a9eb6ba02539f997329962725b71.json  query-d41e8324e5021bc5ff221a5ec94b39aa52d07aff1d1776ed8dbc2a3bb2b655cc.json  query-dbd15801dfb5b1e17cdaf36cf29026231930310e6c8d4b643d3808f9e195353e.json
docs/: API_EXAMPLES.md  AUTHENTICATION.md  AUTH_QUICK_REFERENCE.md  MIGRATION_GUIDE.md  PACKAGING.md  README.md
scripts/: build-release.sh  install-targets.sh  package.sh
store/: Cargo.toml
store/migrations/: 20241123225305_create_times_table.up.sql
store/src/: json.rs  lib.rs  ram.rs  remote.rs  sqlite3.rs
timesd/: Cargo.toml
timesd/migrations/: 20241019064130_comment_table.down.sql  20241019064130_comment_table.up.sql  20241103233547_add_flags_to_times.down.sql  20241103233547_add_flags_to_times.up.sql
timesd/src/: main.rs
timesman-app/: .gitignore  Cargo.toml  todo.md
timesman-app/plugins/pomodoro/: Cargo.toml
timesman-app/plugins/pomodoro/src/: lib.rs
timesman-app/src/: app.rs  arbiter.rs  config.rs  fonts.rs  log.rs  main.rs  model.rs  pane.rs  plugin.rs  req.rs  start.rs  store.rs  times.rs
timesman-app/src/model/: select_model.rs  select_ui.rs  start_model.rs  start_ui.rs  times_model.rs  times_ui.rs  ui.rs
timesman-app/src/model/times_ui/: side_panel.rs
timesman-app/src/pane/: config.rs  log.rs  select.rs  select_pane.rs  select_ui.rs  start.rs  start_ui.rs  test.rs  times.rs  times_ui.rs  ui.rs
timesman-app/src/store/: ram.rs  remote.rs
timesman-bstore/: Cargo.toml  README.md
timesman-bstore/migration/src/: m20220101_000001_create_table.rs
timesman-bstore/migrations/: 20241123225305_create_times_table.down.sql  20241123234431_create_post_table.up.sql
timesman-bstore/src/: fs_file.rs  grpc.rs  grpc.rs.old  json.rs  lib.rs  local.rs  ram.rs  ram.rs.old  remote.rs  sqlite.old  sqlite.rs  sqlite.rs.old  sqlite3.rs
timesman-bstore/src/grpc/: post.rs  times.rs  todo.rs
timesman-bstore/src/local/: post.rs  times.rs  todo.rs
timesman-bstore/src/sqlite/: file.rs  post.rs  prelude.rs  times.rs
timesman-grpc/: Cargo.toml  build.rs
timesman-grpc/proto/: timesman.proto
timesman-grpc/src/: lib.rs
timesman-server/: .gitignore  Cargo.toml  README.md  config.toml
timesman-server/src/: auth.rs  config.rs  grpc.rs  http.rs  lib.rs  main.rs
timesman-tools/: API_DOCUMENTATION.md  CLI_USAGE.md  Cargo.toml  DEVELOPER_GUIDE.md  README.md  TEAM_ASSIGNMENTS.md  TUI_DEMO.md  dev1.txt  task-list.md
timesman-tools/src/: grpc.rs  main.rs  mock_client.rs  tests.rs  tui.rs
timesman-tools/src/tui/: app.rs  ui.rs
timesman-tools/tests/: README.md  cli_parsing_tests.rs  integration_tests.rs
timesman-type/: Cargo.toml
timesman-type/src/: lib.rs
