[package]
name = "timesd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
store = {path = "../store"}
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
serde = "1.0.210"
serde_json = "1.0.131"
sqlx = { version = "0.8.2", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
