[package]
name = "timesman-app"
version = "0.1.0"
edition = "2021"

[features]
default = ["json","grpc","sqlite"]
json = ["timesman-bstore/json"]
http = ["timesman-bstore/http"]
sqlite = ["timesman-bstore/sqlite"]
grpc = ["timesman-bstore/grpc"]

[dependencies]
timesman-type = {path = "../timesman-type"}
timesman-bstore = {path = "../timesman-bstore", optional = true}
timesman-server = {path = "../timesman-server"}
chrono = { version = "0.4.38", features = ["serde"] }
eframe = "0.29.1"
egui = "0.29.1"
egui-file-dialog = "0.7.0"
log = "0.4.22"
once_cell = "1.20.2"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
toml = "0.8.19"
xdg = "2.5.2"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
url = "2.5.4"
tonic = "0.12.3"
async-trait = "0.1.88"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
image = "0.25.6"
