[package]
name = "timesman-bstore"
version = "0.1.0"
edition = "2021"

[features]
default = []
json = ["serde_json"]
http = ["reqwest"]
sqlite = ["sea-orm"]
grpc = ["timesman-grpc", "tonic"]
sea-orm = ["dep:sea-orm"]
local = ["unqlite", "serde_json"]

[dependencies]
timesman-type = {path = "../timesman-type"}
timesman-grpc = {path = "../timesman-grpc", optional = true}
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"], optional = true }
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = {version = "1.0.133", optional = true}
tonic = {version = "0.12.3", optional = true}
tokio = { version = "1.44.1", features = ["fs", "macros", "rt-multi-thread", "sync"] } # Ensure fs feature is enabled
uuid = { version = "1.10.0", features = ["v4"] }
mime_guess = "2.0.5"
sea-orm = { version = "1.1.8", features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"], optional = true }
log = "0.4.27"
migration = {path = "migration"}
unqlite = { version = "1.5.0", optional = true }

[dev-dependencies]
tempfile = "3.19.1"
