[package]
name = "timesman-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
timesman-grpc = { path = "../timesman-grpc" }
#timesman-bstore = {path = "../timesman-bstore"}
timesman-type = {path = "../timesman-type"}
tokio = "1.42.0"
tonic = "0.12.3"
ratatui = "0.28"
crossterm = "0.28"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
serde_json = "1.0"
